// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<label
  data-weight="medium"
  for="textfield-controlled"
>
  Beskriv bekymringen din
</label>
<textarea
  id="textfield-controlled"
  rows="4"
>
</textarea>
<button
  data-variant="secondary"
  type="button"
  style="margin-top: var(--ds-size-2);"
>
  Tøm feltet
</button>
`;

exports[`Full Width 1`] = `
<label
  data-weight="medium"
  for="my-textarea"
>
  Beskriv bekymringen din
</label>
<textarea id="my-textarea">
</textarea>
`;

exports[`Preview 1`] = `
<label
  data-weight="medium"
  for="my-textarea"
>
  Label
</label>
<textarea
  rows="3"
  cols="20"
  id="my-textarea"
>
</textarea>
`;
